--- a/healthcare/templates/creditsandcode.html
+++ b/healthcare/templates/creditsandcode.html
@@ -14,7 +14,7 @@
         <div class="background-image4"></div>
 
         <div class="healthcare-header">
-            <a href="#" target="_blank" class="github">GitHub</a>
+            <a href="https://github.com/wheelchair-tracking-system/hackathon-project" target="_blank" class="github">GitHub</a>
             <a href="/dashboard">Back →</a>
         </div>
 
@@ -26,7 +26,7 @@
                 <div class="credit-code-section">
                     <h2 class="credit-code-heading">GitHub Repository</h2>
                     <p class="credit-code-text">You can find the entire project code on GitHub:</p>
-                    <a href="#" target="_blank" class="credit-code-link">Visit GitHub Repository</a>
+                    <a href="https://github.com/wheelchair-tracking-system/hackathon-project" target="_blank" class="credit-code-link">Visit GitHub Repository</a>
                 </div>
 
                 <div class="credit-code-section">
