--- a/healthcare/templates/dashboard.html
+++ b/healthcare/templates/dashboard.html
@@ -11,7 +11,7 @@
     <div class="fade-entry">
         <div class="healthcare-header">
             <a href="https://jecrcuniversity.edu.in/" target="_blank">Get to know JU</a>
-            <a href="#" target="_blank" class="github">GitHub</a>
+            <a href="https://github.com/wheelchair-tracking-system/hackathon-project" target="_blank" class="github">GitHub</a>
             <a href="/login">Create New Account</a>
             <a href="/logout">Log out</a>
         </div>
