--- a/healthcare/templates/home.html
+++ b/healthcare/templates/home.html
@@ -18,7 +18,7 @@
         <div class="healthcare-header">
             <a href="/dashboard">Log in</a>
             <a href="/admin">Admin Panel</a>
-            <a href="#" target="_blank" class="github">GitHub</a>
+            <a href="https://github.com/wheelchair-tracking-system/hackathon-project" target="_blank" class="github">GitHub</a>
         </div>
 
         <div class="healthcare-content">
